# d-dnnf-reasoner

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  build.rs  clean.sh  ddnnife_dw.sh  deny.toml  flake.nix  rustfmt.toml
.github/workflows/: Benchmark.yaml  CI.yaml  CI.yml  Container.yaml  Container.yml  Kotlin.yaml  Pages.yaml  Portable.yaml  Publish.yaml  Python.yaml  Windows.yaml  ddnnife_CI.yml  reasoner_CI.yml
bindings/: README.md
bindings/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
bindings/kotlin/src/main/kotlin/de/softvare/ddnnife/: java-utils.kt
bindings/kotlin/src/test/java/de/softvare/ddnnife/: JavaTest.java
bindings/kotlin/src/test/kotlin/: Ddnnf.kt
bindings/kotlin/src/test/kotlin/de/softvare/ddnnife/: DdnnfTest.kt
bindings/python/: README.md  pyproject.toml
bindings/python/test/: test_ddnnf.py
bindings/python/tests/: test_ddnnf.py
ddnnife/: Cargo.toml
ddnnife/benches/: load.rs  t_wise.rs
ddnnife/src/: config.rs  ddnnf.rs  ffi.rs  int_hash.rs  lib.rs  parser.rs  rand.rs  util.rs
ddnnife/src/cnf/: into.rs
ddnnife/src/ddnnf/: anomalies.rs  clause_cache.rs  extended_ddnnf.rs  heuristics.rs  multiple_queries.rs  node.rs  statistics.rs  stream.rs
ddnnife/src/ddnnf/anomalies/: atomic_sets.rs  config_creation.rs  core.rs  sat.rs  t_wise_sampling.rs
ddnnife/src/ddnnf/anomalies/t_wise_sampling/: config.rs  covering_strategies.rs  sample.rs  sample_merger.rs  sampling_eval.rs  sampling_result.rs  t_iterator.rs  t_wise_sampler.rs
ddnnife/src/ddnnf/anomalies/t_wise_sampling/sample_merger/: attribute_similarity_merger.rs  attribute_zipping_merger.rs  similarity_merger.rs  zipping_merger.rs
ddnnife/src/ddnnf/counting/: default_count.rs  features.rs  marking.rs
ddnnife/src/ddnnf/extended_ddnnf/: objective_function.rs  optimal_configs.rs
ddnnife/src/parser/: c2d_lexer.rs  d4_lexer.rs  from_cnf.rs  graph.rs  intermediate_representation.rs  persisting.rs  util.rs
ddnnife/src/parser/intermediate_representation/: fixed_fifo.rs
ddnnife/tests/: cardinalities.rs  parser.rs  write_to_file.rs
ddnnife/tests/data/: HiPAcc.cnf  VP9.cnf  VP9.config  VP9_d4.nnf  VP9_sb_fs.csv  VP9_wo_-4-5.cnf  X264.cnf  auto1_c2d.nnf  auto1_sb_fs.csv  minimal_false.nnf  minimal_true.nnf  sandwich.nnf  sandwich_attribute_vals.csv  small_ex_c2d.nnf  small_ex_d4.nnf  small_test.config  stub_false.nnf  stub_true.nnf
ddnnife_bin/: Cargo.toml
ddnnife_bin/src/: main.rs  stream.rs
ddnnife_bin/src/stream/: query.rs
ddnnife_bindgen/: Cargo.toml
ddnnife_cli/: Cargo.toml
ddnnife_cli/src/: main.rs  stream.rs
ddnnife_cli/src/stream/: query.rs
ddnnife_cli/tests/data/: VP9_d4.nnf  auto1_d4.nnf
ddnnife_cnf/: Cargo.toml
ddnnife_cnf/src/: cnf.rs  lib.rs
ddnnife_cnf/src/cnf/: header.rs
ddnnife_dhone/: Cargo.toml
ddnnife_dhone/src/: main.rs
ddnnife_ffi/: Cargo.toml  uniffi.toml
ddnnife_ffi/src/: cnf.rs  ddnnf.rs  ddnnf_mut.rs  lib.rs  node.rs  statistics.rs  t_wise_sampling.rs  types.rs  util.rs
doc/: aarch64-darwin-d4.md  aarch64-darwin.md  windows.md  x86_64-darwin-d4.md  x86_64-darwin.md  x86_64-linux-d4.md  x86_64-linux.md  x86_64-windows.md
doc/built/: linux-d4.md  macos-d4.md
example_input/: BerkeleyDBC.dimacs.nnf  Dune.dimacs  Dunec2d.nnf  Dunedsharp.nnf  Dunesmooth.nnf  VP9_d4_42.nnf  X264.config  X264.dimacs.nnf  adderII.dimacs.nnf  aim711_d4_1277.nnf  auto1_d4.nnf  auto1_d4_2513.nnf  axTLS_d4_684.nnf  berkeleydb.dimacs.nnf  berkeleydb_dsharp.dimacs.nnf  berkeleydb_dsharp.nnf  berkeleydb_prepo.dimacs.nnf  busybox-1.18.0_c2d.nnf  embtoolkit.dimacs.nnf  financialServices_2018-05-09.dimacs.nnf  lrzip.dimacs.nnf  small.nnf  small_example_c2d.nnf  small_smooth.nnf  stream_queries_auto1.txt  uClibc.dimacs.nnf  uClinux-base.dimacs.nnf  uClinux-distribution.dimacs.nnf  vrc4373.dimacs.nnf
nix/: bindgen.nix  ddnnife-test.nix  ddnnife.nix  kotlin-dependencies.json  kotlin.nix  rust.nix
src/: ddnnf.rs  lib.rs  main.rs  maybe_parallel.rs  parser.rs
src/data_structure/: anomalies.rs  mod.rs
src/ddnnf/: anomalies.rs  clause_cache.rs  config_creation.rs  counting.rs  heuristics.rs  multiple_queries.rs  node.rs  stream.rs
src/ddnnf/anomalies/: atomic_sets.rs  config_creation.rs  core.rs  false_optional.rs  sat.rs  t_wise_sampling.rs
src/ddnnf/anomalies/t_wise_sampling/: config.rs  covering_strategies.rs  data_structure.rs  iterator.rs  sample.rs  sample_merger.rs  sat_solver.rs  sat_wrapper.rs  t_iterator.rs  t_wise_sampler.rs
src/ddnnf/anomalies/t_wise_sampling/sample_merger/: similarity_merger.rs  zipping_merger.rs
src/ddnnf/counting/: default_count.rs  features.rs  marking.rs  partial_configs.rs
src/parser/: bufreader_for_big_files.rs  c2d_lexer.rs  d4_lexer.rs  d4v2_wrapper.rs  from_cnf.rs  intermediate_representation.rs  lexer.rs  mod.rs  persisting.rs  util.rs
src/parser/intermediate_representation/: fixed_fifo.rs
src/sampler/: covering_strategies.rs  data_structure.rs  iterator.rs  mod.rs  sat_solver.rs
src/sampler/sample_merger/: mod.rs  similarity_merger.rs  zipping_merger.rs
src/stream/: mod.rs
stream_test/: DdnnifeWrapper.java  StreamGobbler.java  Test.java
tests/: cardinalities.rs  data_structure.rs  from_cnf.rs  parser.rs  sat_solver.rs  write_ddnnf.rs  write_to_file.rs
tests/data/: .small_missing_unit.cnf  HiPAcc.cnf  VP9.cnf  VP9_sb_fs.csv  VP9_sb_pc.txt  X264.cnf  auto1.config  auto1_sb_fs.csv  auto1_sb_pc.csv  axTLS.config  axTLS.dimacs.nnf  axTLS_pc_out.txt  axTLS_should_be_fs.csv  axTLS_should_be_pc.txt  small_ex.cnf  small_test.dimacs.nnf  toybox.cnf
