[package]
name = "ddnnife"
version = "0.7.0"
authors = ["Heiko Raab <heiko.raab@uni-ulm-de>", "Chico Sundermann <chico.sundermann@uni-ulm.de>", "Jan Baudisch <jan.baudisch@uni-ulm.de>"]
edition = "2021"
license = "LGPL-3.0-or-later"

[lib]
name = "ddnnf_lib"
path = "src/lib.rs"

[[bin]]
name = "ddnnife"
path = "src/bin/ddnnife.rs"

[[bin]]
name = "dhone"
path = "src/bin/dhone.rs"

[profile.release]
lto = true
codegen-units = 1

[profile.flamegraph]
inherits = "release"
debug = true

[features]
d4 = ["dep:d4-oxide"]

[dependencies]
bitvec = "1.0"
clap = { version = "4.5", features = ["cargo", "derive", "color"] }
csv = "1.3"
file_diff = "1.0.0"
itertools = "0.13"
mimalloc = "0.1"
nom = "7.1"
once_cell = "1.19"
petgraph = "0.6"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
streaming-iterator = "0.1"
tempfile = "3.10"
workctl = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
d4-oxide = { version = "0.3.0", optional = true }

[dependencies.gmp-mpfr-sys]
version = "1.6"
default-features = false
features = ["c-no-tests", "force-cross"]

[dependencies.rug]
version = "1.24"
default-features = false
features = ["integer", "float", "rational"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "2.0"
