[workspace]
members = [
    "ddnnife",
    "ddnnife_bin",
    "ddnnife_bindgen",
    "ddnnife_dhone",
]

resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
ddnnife = { path = "ddnnife" }
mimalloc = "0.1"
uniffi = { version = "0.28" }

[profile.release]
lto = true
codegen-units = 1

[profile.flamegraph]
inherits = "release"
debug = true
