[workspace]
members = [
    "ddnnife",
    "ddnnife_bin",
    "ddnnife_bindgen",
    "ddnnife_cnf",
    "ddnnife_dhone",
    "ddnnife_ffi",
]

resolver = "2"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
ddnnife = { path = "ddnnife" }
ddnnife_cnf = { path = "ddnnife_cnf" }
log = "0.4"
mimalloc = "0.1"
num = "0.4"
uniffi = { version = "0.29" }

[profile.release]
lto = true
codegen-units = 1

[profile.flamegraph]
inherits = "release"
debug = true
