[package]
name = "ddnnife"
description = "d-DNNF toolkit"
version = "0.7.0"
authors = ["Heiko Raab <heiko.raab@uni-ulm-de>", "Chico Sundermann <chico.sundermann@uni-ulm.de>", "Jan Baudisch <jan.baudisch@uni-ulm.de>"]
edition = "2021"
license = "LGPL-3.0-or-later"
workspace = ".."

[features]
d4 = ["dep:d4-oxide"]
deterministic = []
uniffi = ["dep:uniffi"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bimap = "0.6"
bitvec = "1.0"
csv = { workspace = true }
file_diff = "1.0.0"
itertools = "0.14"
log = { workspace = true }
nom = "8.0"
num = "0.4"
once_cell = "1.20"
petgraph = "0.7"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
streaming-iterator = "0.1"
tempfile = "3.15"
uniffi = { workspace = true, optional = true }
workctl = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
d4-oxide = { version = "0.5", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
serial_test = "2.0"
