[package]
name = "ddnnife"
description = "d-DNNF toolkit"
version = "0.9.0"
authors = ["Heiko Raab <heiko.raab@uni-ulm-de>", "Chico Sundermann <chico.sundermann@uni-ulm.de>", "Jan Baudisch <jan.baudisch@uni-ulm.de>"]
edition = "2021"
license = "LGPL-3.0-or-later"
workspace = ".."

[features]
d4 = ["dep:d4-oxide"]
deterministic = []

[dependencies]
bimap = "0.6"
bitvec = "1"
csv = { workspace = true }
cxx = "=1.0.138"
ddnnife_cnf = { workspace = true }
file_diff = "1"
itertools = "0.14"
log = { workspace = true }
nom = "8"
num = { workspace = true }
once_cell = "1"
petgraph = "0.7"
rand = "0.9"
rand_distr = "0.5"
rand_pcg = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
streaming-iterator = "0.1"
tempfile = "3"
workctl = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
d4-oxide = { version = "0.6", optional = true }
