[package]
name = "ddnnife"
description = "d-DNNF toolkit"
version = "0.11.0"
repository = "https://github.com/SoftVarE-Group/d-dnnf-reasoner"
edition = "2024"
license = "LGPL-3.0-or-later"
workspace = ".."

[features]
deterministic = []

[dependencies]
bimap = "0.6"
bitvec = "1"
csv = { workspace = true }
ddnnife_cnf = { workspace = true }
file_diff = "1"
itertools = "0.14"
log = { workspace = true }
nom = "8"
num = { workspace = true }
once_cell = "1"
petgraph = "0.8"
rand = "0.9"
rand_distr = "0.5"
rand_pcg = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
streaming-iterator = "0.1"
workctl = "0.2"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "load"
harness = false

[[bench]]
name = "t_wise"
harness = false
