[package]
name = "ddnnife_bin"
description = "d-DNNF toolkit"
version = "0.10.0"
authors = ["Heiko Raab <heiko.raab@uni-ulm-de>", "Chico Sundermann <chico.sundermann@uni-ulm.de>", "Jan Baudisch <jan.baudisch@uni-ulm.de>"]
edition = "2021"
license = "LGPL-3.0-or-later"
workspace = ".."

[[bin]]
name = "ddnnife"
path = "src/main.rs"

[features]
deterministic = ["ddnnife/deterministic"]

[dependencies]
clap = { workspace = true }
csv = { workspace = true }
ddnnife = { workspace = true }
ddnnife_cnf = { workspace = true }
log = { workspace = true }
mimalloc = { workspace = true }
nom = "8"
nom_permutation = "1"
pretty_env_logger = "0.5"
serde_json = "1"

[dev-dependencies]
num = { workspace = true }
