[package]
name = "ddnnife_ffi"
description = "ddnnife FFI bindings"
version = "0.10.0"
repository = "https://github.com/SoftVarE-Group/d-dnnf-reasoner"
edition = "2024"
license = "LGPL-3.0-or-later"
workspace = ".."

[lib]
name = "ddnnife"
crate-type = ["cdylib"]

[dependencies]
ddnnife = { workspace = true }
ddnnife_cnf = { workspace = true }
uniffi = { workspace = true }
num = { workspace = true }
